step3/modules/ec2.tf
# EC2ロール
resource "aws_iam_role" "ec2_role" {
  name = "ssm-role"
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Effect = "Allow"
      Principal = {
        Service = "ec2.amazonaws.com"
      }
      Action = "sts:AssumeRole"
    }]
  })
}

resource "aws_iam_instance_profile" "ec2_instance_profile" {
  name = "ec2-instance-profile"
  role = aws_iam_role.ec2_role.name
}

# EC2
resource "aws_instance" "ec2" {
  #  ami                    = "ami-072298436ce5cb0c4" # AmazonLinux2023
  ami = "ami-0439cd8bc5628c9e8" # AmazonLinux2023

  instance_type          = "t2.micro"
  subnet_id              = aws_subnet.public_subnet.id
  vpc_security_group_ids = [aws_security_group.ec2_sg.id]
  iam_instance_profile   = aws_iam_instance_profile.ec2_instance_profile.name
  key_name               = var.keyName

  metadata_options {
    http_tokens = "required"
  }

  tags = {
    Name = "${var.resourceName}-instance"
  }
}
